2003-05-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs:
        (Select): don't create arrays if not needed.
        (Poll): call Select_internal directly.

	Warning: you need an up to date runtime for this to work!

2003-03-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UdpClient.cs: don't bind the socket unless .ctor (IPEndPoint) is used.
	Added more checks and throws.
	Small fixes in Send to avoid duplicating the buffer.
	Moved CheckIfDisposed calls to the start of the methods instead of doing
	the check inside a finally clause.

2003-03-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs:
	(SendTo): fix from Jerome Laban <jlaban@wanadoo.fr>.

2003-02-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs: patch from Elan Feingold <efeingold@mn.rr.com>. Fixes
	NullReferenceException when the callback is null.

2003-02-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NetworkStream.cs: allow 0 size array in Write.

2003-02-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs: make Worker.Connect and Receive work with non-blocking
	sockets. May be Receive* and Send* in Worker need to do the same. I'll
	wait for bug reports. Set IsCompleted to true before invoking the end
	callback. Fixes bug #38136.

2003-01-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NetworkStream.cs: the check for disposed should not be done in the
	finally clause.

2003-01-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UdpClient.cs: fixed bug #36226.

2002-11-13  Dick Porter  <dick@ximian.com>

	* Socket.cs: Only close the socket in one place, ie the Dispose
	method.  Fixes bug 32054.

2002-11-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs: offset == size == 0 it's ok in Send ().

2002-11-03  Phillip Pearson  <pp@myelin.co.nz>

	* TcpClient.cs: Fixed SetTcpClient() to pass through to the Client 
	property, which now sets stream to null (it's set by GetStream()).  This 